feat: update BlockRacing to 26.2